--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+body {
+  font-family: Arial, sans-serif;
+  background-color: #f3f4f6;
+  color: #333;
+}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+
